updated the versions